--- a/workspace/fyyur/application/templates/forms/edit_venue.html
+++ b/workspace/fyyur/application/templates/forms/edit_venue.html
@@ -1,13 +1,23 @@
 {% extends 'layouts/main.html' %}
-{% block title %}Edit Venue{% endblock %}
+
+{% block title %}
+  Edit Venue
+{% endblock %}
+
 {% block content %}
   <div class="form-wrapper">
     <form class="form" method="post" action="/venues/{{venue.id}}/edit">
-      <h3 class="form-heading">Edit venue <em>{{ venue.name }}</em> <a href="{{ url_for('main.index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+      <h3 class="form-heading">Edit Venue <em>{{ venue.name }}</em> <a href="{{ url_for('main.index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
+      
       <div class="form-group">
         <label for="name">Name</label>
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
+      <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      </div>
+
       <div class="form-group">
           <label>City & State</label>
           <div class="form-inline">
@@ -23,19 +33,26 @@
         <label for="address">Address</label>
         {{ form.address(class_ = 'form-control', autofocus = true) }}
       </div>
+
       <div class="form-group">
           <label for="phone">Phone</label>
           {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
-      <div class="form-group">
-        <label for="genres">Genres</label>
-        <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
+          <label for="website">Website</label>
+          {{ form.website(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+      </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+      </div>
+
+      <div class="form-group">
+          <label for="genres">Genres</label>
+          <small>Ctrl+Click to select multiple</small>
+          {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+      </div>
+
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
