--- a/workspace/fyyur/application/templates/pages/home.html
+++ b/workspace/fyyur/application/templates/pages/home.html
@@ -6,12 +6,12 @@
 		<h1>Fyyur 🔥</h1>
 		<p class="lead">Where musical artists meet musical venues.</p>
 		<h3>
-			<a href="/venues"><button class="btn btn-primary btn-lg">Find a venue</button></a>
-			<a href="/venues/create"><button class="btn btn-default btn-lg">Post a venue</button></a>
+			<a href="{{ url_for('venue.search_venues_form') }}"><button class="btn btn-primary btn-lg">Find a venue</button></a>
+			<a href="{{ url_for('venue.create_venue_form') }}"><button class="btn btn-default btn-lg">Post a venue</button></a>
 		</h3>
 		<h3>
-			<a href="/artists"><button class="btn btn-primary btn-lg">Find an artist</button></a>
-			<a href="/artists/create"><button class="btn btn-default btn-lg">Post an artist</button></a>
+			<a href="{{ url_for('artist.search_artists_form') }}"><button class="btn btn-primary btn-lg">Find an artist</button></a>
+			<a href="{{ url_for('artist.create_artist_form') }}"><button class="btn btn-default btn-lg">Post an artist</button></a>
 		</h3>
 		<p class="lead">Publicize about your show for free.</p>
 		<h3>
