--- a/workspace/fyyur/application/templates/pages/search_venues.html
+++ b/workspace/fyyur/application/templates/pages/search_venues.html
@@ -34,7 +34,7 @@
 			<a href="/venues/{{ venue.id }}">
 				<i class="fas fa-music"></i>
 				<div class="item">
-					<h5>{{ venue.name }}</h5>
+					<h5>{{ venue.name }}, <small>{{ venue.num_upcoming_shows }} upcoming shows</small></h5>
 				</div>
 			</a>
 		</li>
